<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="button_app_launch_alert">This button will launch my %1$s</string>
    <string name="app_title_spotify_streamer">Spotify Streamer</string>
    <string name="app_title_score_app">Score App</string>
    <string name="app_title_library_app">Library App</string>
    <string name="app_title_build_it_bigger">Build It Bigger</string>
    <string name="app_title_xyz_reader">XYZ Reader</string>
    <string name="app_title_my_own_app">Capstone : My Own App</string>
</resources>
