<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/LayoutBody"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/app_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            style="@style/TextViewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:text="My Nanodegree Apps!" />


        <Button
            android:id="@+id/button_spotify_streamer"
            style="@style/ButtonCommon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/app_title_spotify_streamer"
            android:textAllCaps="true"
            android:layout_marginBottom="10dp" />

        <Button
            android:id="@+id/button_score_app"
            style="@style/ButtonCommon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/app_title_score_app"
            android:textAllCaps="true"
            android:layout_marginBottom="10dp" />

        <Button
            android:id="@+id/button_library_app"
            style="@style/ButtonCommon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/app_title_library_app"
            android:textAllCaps="true"
            android:layout_marginBottom="10dp" />

        <Button
            android:id="@+id/button_build_it_bigger"
            style="@style/ButtonCommon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/app_title_build_it_bigger"
            android:textAllCaps="true"
            android:layout_marginBottom="10dp" />

        <Button
            android:id="@+id/button_xyz_reader"
            style="@style/ButtonCommon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/app_title_xyz_reader"
            android:textAllCaps="true"
            android:layout_marginBottom="10dp" />

        <Button
            android:id="@+id/button_capstone"
            style="@style/ButtonAccent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/app_title_my_own_app"
            android:textAllCaps="true"
            android:layout_marginBottom="10dp"/>


    </LinearLayout>

</LinearLayout>
